huge refactor project structure; update to spring 2 and java 10