@@ -5,7 +5,7 @@
 
     <groupId>com.biqasoft</groupId>
     <artifactId>base</artifactId>
-    <version>2018.3.1</version>
+    <version>2018.7.0</version>
 
     <name>com.biqasoft.base</name>
     <packaging>pom</packaging>
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.0.0.RELEASE</version>
+        <version>2.0.3.RELEASE</version>
     </parent>
 
     <properties>
@@ -36,8 +36,8 @@
         <springfox.version>2.8.0</springfox.version>
 
         <!-- Maven plugins -->
-        <maven-compiler-plugin.version>3.5</maven-compiler-plugin.version>
-        <maven-surefire-plugin.version>2.19.1</maven-surefire-plugin.version>
+        <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
+        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>
         <maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
 
         <!-- Sardine WEBDAV Client -->
@@ -55,14 +55,12 @@
 
         <dropbox-core-sdk.version>1.8.2</dropbox-core-sdk.version>
         <tika-core.version>1.12</tika-core.version>
-        <jaudiotagger.version>2.0.3</jaudiotagger.version>
-        <netty-all.version>4.0.36.Final</netty-all.version>
         <commons-io.version>2.4</commons-io.version>
-        <microservice-communicator.version>1.2.19-RELEASE</microservice-communicator.version>
-        <spring-cloud-consul-dependencies.version>2.0.0.M6</spring-cloud-consul-dependencies.version>
+        <microservice-communicator.version>2.0.0-RELEASE</microservice-communicator.version>
+        <spring-cloud-consul-dependencies.version>2.0.0.RELEASE</spring-cloud-consul-dependencies.version>
 
         <!--override base import https://github.com/Ecwid/consul-api/issues/143-->
-        <consul-api.version>1.3.1</consul-api.version>
+        <consul-api.version>1.4.0</consul-api.version>
     </properties>
 
     <!-- for consul cloud -->
@@ -346,39 +344,39 @@
             </activation>
         </profile>
 
-        <profile>
-            <id>jdk9</id>
-            <properties>
-                <jdk.version>1.9</jdk.version>
-            </properties>
+        <!--<profile>-->
+            <!--<id>jdk9</id>-->
+            <!--<properties>-->
+                <!--<jdk.version>1.9</jdk.version>-->
+            <!--</properties>-->
 
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>${maven-surefire-plugin.version}</version>
-                        <configuration>
-                            <systemPropertyVariables>
-                                <java.version>1.9</java.version>
-                            </systemPropertyVariables>
-                            <argLine>
-                                --add-modules=java.xml.bind 
-                            </argLine>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
+            <!--<build>-->
+                <!--<plugins>-->
+                    <!--<plugin>-->
+                        <!--<groupId>org.apache.maven.plugins</groupId>-->
+                        <!--<artifactId>maven-surefire-plugin</artifactId>-->
+                        <!--<version>${maven-surefire-plugin.version}</version>-->
+                        <!--<configuration>-->
+                            <!--<systemPropertyVariables>-->
+                                <!--<java.version>10</java.version>-->
+                            <!--</systemPropertyVariables>-->
+                            <!--<argLine>-->
+                                <!--&#45;&#45;add-modules=java.xml.bind -->
+                            <!--</argLine>-->
+                        <!--</configuration>-->
+                    <!--</plugin>-->
+                <!--</plugins>-->
+            <!--</build>-->
 
-        </profile>
+        <!--</profile>-->
 
         <profile>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
-            <id>jdk8</id>
+            <id>jdk10</id>
             <properties>
-                <jdk.version>1.8</jdk.version>
+                <jdk.version>1.10</jdk.version>
             </properties>
 
             <build>
